Socket functionality added

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ HOST=localhost
 
 API=http://localhost:3000
 
+SOCK_URL=http://localhost:5000
+
 DB_NAME=chatapp
 
 MONGO_URI=mongodb://localhost:27017
