--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_NAME=chatapp
 
 
 
-#MONGO_URI=mongodb+srv://ghsjulian:91TxpwMdPSRi6LuD@ghsjulian.igtq223.mongodb.net/?retryWrites=true&w=majority&appName=ghsjulian
+MONGO_URI=mongodb+srv://ghsjulian:91TxpwMdPSRi6LuD@ghsjulian.igtq223.mongodb.net/?retryWrites=true&w=majority&appName=ghsjulian
 
 #MONGO_URI=mongodb://localhost:27017
 
