--- a/.env
+++ b/.env
@@ -4,20 +4,12 @@ PORT=3000
 
 HOST=localhost
 
-#API=http://localhost:3000
+API=http://localhost:3000
 
-API=https://chat-app-v2-0-0.onrender.com
-
-#FRONTEND_SOCK_URL=http://localhost:5000
-
-FRONTEND_SOCK_URL=https://chat-app-v2-0-0.onrender.com
+FRONTEND_SOCK_URL=http://localhost:5000
 
 DB_NAME=chatapp
 
-
-
-MONGO_URI=mongodb+srv://ghsjulian:91TxpwMdPSRi6LuD@ghsjulian.igtq223.mongodb.net/?retryWrites=true&w=majority&appName=ghsjulian
-
-#MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://localhost:27017
 
 NODE_ENV=production
